2003-02-24  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* kb/atom.c :
	* kb/atom.h :

	  - Atom class is now a derived class of list_item. This is to make
	    way for the atomlist class.

	  - Added a cmp() function in atom.

2003-02-18  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* configure :
	* configure.ac :

	  - Fixed CFLAGS/CXXFLAGS = -L..\lib to -L../lib

	* common/vlad.h :

	  - Added a macro for new(nothrow)

	  - Changed new(nothrow) to new(std::nothrow) to keep gcc happy.

	* common/list.cpp :
	* kb/atom.cpp :
	* kb/identifier.cpp :
	* kb/symtab.cpp :
	* main/vlad.cpp :
	* parser/parser.y :
	* parser/scanner.l :

	  - Changed include directives to use stdc++ instead of stdc. Was 
	    causing "deprecated" warnings.

	  - Changed to use new macro.

	* main/Makefile.in :

	  - Took out strip --strip-all. Apparently, not all versions of strip 
	    support it.

2003-02-12  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* README :
	* configure :
	* configure.ac :
	* main/Makefile.in :

	  - Added --enable-strip configure option to allow final main binary
	    to be stripped with --strip-all after building.

	* kb/atom.cpp :

	  - Sanity checks to ensure that the identifiers given the 
	    init() functions are valid.

2003-02-11  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* kb/Makefile.in :
	* kb/atom.h :
	* kb/atom.cpp :

	  - Added atom class.


2003-02-04  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* config.h.in :

	  - Added a template file for config.h to be generated
	    by configure.

	  - At the moment only the debug flag and version string are set.

	* Makefile.in :
	* configure.ac :
	* common/Makefile.in :
	* common/vlad.h :
	* kb/Makefile.in :
	* main/Makefile.in :
	* parser/Makefile.in :

	  - Took out -DDEBUG from makefiles.

	  - Cleared out -L and -I from the makefile. Now these options will
	    be generated by configure and passed into the makefiles via the
	    CFLAGS and LDFLAGS variables.
